sales quotation print done

--- a/frontend/src/app/layout/purchase/purchase.component.html
+++ b/frontend/src/app/layout/purchase/purchase.component.html
@@ -165,7 +165,7 @@
                     </div>
                     <div>
                         <b style="float: right;">No #:- {{token}} </b> <br>
-                        {{date | date: 'd-MM '}} &nbsp; <b>{{userName | uppercase}}</b>
+                        {{date | date: 'MMM d, y, h:mm:ss a'}} &nbsp; <b>{{userName | uppercase}}</b>
                     </div>
                 </div>
                 <div style="display: flex; font-weight: bold; border-top: 1px solid black">
@@ -223,7 +223,7 @@
                     </div>
                     <div>
                         <b style="float: right;">No #:- {{token}} </b> <br>
-                        {{date | date: 'd-MM '}} &nbsp; <b>{{userName | uppercase}}</b>
+                        {{date | date:  'MMM d, y, h:mm:ss a'}} &nbsp; <b>{{userName | uppercase}}</b>
                     </div>
                 </div>
                 <div style="display: flex; font-weight: bold; border-top: 1px solid black">
