--- a/frontend/src/app/layout/purchase/purchase.component.html
+++ b/frontend/src/app/layout/purchase/purchase.component.html
@@ -124,8 +124,9 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <!-- <ng-container
-                    *ngIf="loggedInUsersData.user_name === element.user_name && (element.date | date: 'M/d/yy')  ===  (currentDate | date: 'M/d/yy')"> -->
+                 <ng-container
+                    *ngIf="loggedInUsersData.user_name === element.user_name ">
+                    <!-- (element.date | date: 'M/d/yy')  ===  (currentDate | date: 'M/d/yy') -->
                     <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
                         (click)="onEditNewPurchase(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
@@ -134,7 +135,7 @@
                         [color]="tableParams.active? 'warn': 'primary'" (click)="changeStatus(element.id)">
                         <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                     </button>
-                    <!-- </ng-container> -->
+                   </ng-container>
                 </td>
             </ng-container>
             <ng-container matColumnDef="print">
