--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -112,24 +112,29 @@
                 </ng-container>
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef>Actions</th>
+
                     <td mat-cell *matCellDef="let element">
-                        <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                            <ng-container *ngIf="loggedInUsersData.user_name === element.user_name">
+                            <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
                             (click)="onEditNewCustomers(element)">
                             <mat-icon aria-label="Edit">edit</mat-icon>
                         </button>
                         <button mat-icon-button matTooltip="Click to Delete" color="warn"
-                            (click)="confirmDialog(element.id)">
-                            <mat-icon aria-label="Delete">delete</mat-icon>
-                        </button>
-                    </td>
+                        (click)="confirmDialog(element.id)">
+                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    </button>
+                </ng-container>
+                </td>
                 </ng-container>
                 <ng-container matColumnDef="print">
                     <th mat-header-cell *matHeaderCellDef>Print</th>
                     <td mat-cell *matCellDef="let element">
+                        <ng-container *ngIf="loggedInUsersData.user_name === element.user_name">
                         <button mat-icon-button matTooltip="Move to sales " type="button"
                             (click)="onSelectCustomers(element)">
                             <mat-icon aria-label="" class="green">device_hub</mat-icon>
                         </button>
+                        </ng-container>
                         <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button"
                             (click)="getPrintData(element.id)">
                             <mat-icon aria-label="PRINT" color="primary">print</mat-icon>
