--- a/frontend/src/app/layout/items/cateogry/items-category.component.html
+++ b/frontend/src/app/layout/items/cateogry/items-category.component.html
@@ -36,7 +36,7 @@
         <ng-container matColumnDef="code">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Code</th>
             <td mat-cell *matCellDef="let element">
-                {{ element.code }}
+                {{ element.code | uppercase }}
             </td>
         </ng-container>
 
@@ -44,7 +44,7 @@
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
             <td mat-cell *matCellDef="let element">
-                {{ element.name }}
+                {{ element.name | uppercase }}
             </td>
         </ng-container>
 
