--- a/frontend/src/app/layout/items/items.component.html
+++ b/frontend/src/app/layout/items/items.component.html
@@ -79,14 +79,14 @@
             <ng-container matColumnDef="item_code">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Code</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.item_code }}
+                    {{ element.item_code | uppercase }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="item_name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.item_name }}
+                    {{ element.item_name | uppercase }}
                 </td>
             </ng-container>
 
