--- a/frontend/src/app/layout/user/user.component.html
+++ b/frontend/src/app/layout/user/user.component.html
@@ -29,7 +29,7 @@
             <ng-container matColumnDef="user_name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>User Name</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.user_name }}
+                    {{ element.user_name | uppercase }}
                 </td>
             </ng-container>
 
@@ -56,7 +56,7 @@
 
             <ng-container matColumnDef="role">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Role</th>
-                <td mat-cell *matCellDef="let element">{{ element.role }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.role | uppercase }}</td>
             </ng-container>
 
             <ng-container matColumnDef="action">
