--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -73,7 +73,7 @@
                 <ng-container matColumnDef="remarks">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Remarks</th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.remarks | titlecase}}
+                        {{ element.remarks | uppercase}}
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="qty">
@@ -104,11 +104,11 @@
                 </ng-container>
                 <ng-container matColumnDef="tier">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Tier</th>
-                    <td mat-cell *matCellDef="let element">{{ element.tier_code | titlecase }}</td>
+                    <td mat-cell *matCellDef="let element">{{ element.tier_code | uppercase }}</td>
                 </ng-container>
                 <ng-container matColumnDef="user">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
-                    <td mat-cell *matCellDef="let element">{{ element.user_name | titlecase }}</td>
+                    <td mat-cell *matCellDef="let element">{{ element.user_name | uppercase }}</td>
                 </ng-container>
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef>Actions</th>
