search query changes

--- a/frontend/src/app/layout/purchase/purchase.component.html
+++ b/frontend/src/app/layout/purchase/purchase.component.html
@@ -43,6 +43,10 @@
             <button color="primary" class="margin btn" mat-raised-button (click)="getPurchase()">
                 Search
             </button>
+            <!-- clear button -->
+            <button color="primary" class="margin btn" mat-raised-button (click)="clearSearch()">
+                Clear Search
+            </button>
             <!-- add new purchase button -->
             <button color="primary" class="margin btn" mat-raised-button *ngIf="!isShowAddPurchase"
                 (click)="onAddNewPurchase()">
