--- a/frontend/src/app/layout/suppliers/add-suppliers/add-suppliers.component.html
+++ b/frontend/src/app/layout/suppliers/add-suppliers/add-suppliers.component.html
@@ -52,7 +52,7 @@
         </div>
         <!-- Other start -->
         <mat-form-field>
-            <mat-label>Other</mat-label>
+            <mat-label>Comment</mat-label>
             <input matInput formControlName="other" />
         </mat-form-field>
         <div>
