--- a/frontend/src/app/layout/suppliers/suppliers.component.html
+++ b/frontend/src/app/layout/suppliers/suppliers.component.html
@@ -51,7 +51,7 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="purchase_price">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Purchase Price</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Purchase</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.purchase_price | currency: 'INR' }}
                 </td>
