--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.html
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.html
@@ -52,7 +52,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <mat-spinner class="loader" *ngIf="!selectItemLoader" diameter="20"></mat-spinner>
+                <mat-spinner class="loader" *ngIf="selectItemLoader" diameter="20"></mat-spinner>
             </div>
 
             <!-- toggle button -->
@@ -61,14 +61,21 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Qty.</mat-label>
-                    <input matInput formControlName="qty" type="tel"  maxlength="4"/>
+                    <ng-container *ngIf="isCheckOverQtyColor">
+                    <input matInput formControlName="qty" type="tel" style="color: red;" maxlength="4" (keyup)="isCheckOverQty()"/>
+                    </ng-container>
+                    <ng-container *ngIf="!isCheckOverQtyColor">
+                    <input matInput formControlName="qty" type="tel"  maxlength="4" (keyup)="isCheckOverQty()"/>
+                    </ng-container>
                 </mat-form-field>
             </div>
             <!-- available start -->
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Available</mat-label>
-                    <input matInput matTooltip="Not Editable" readonly [value]="availableItemById"/>
+
+
+                    <input matInput matTooltip="Not Editable" readonly [value]="availableItemById" />
                 </mat-form-field>
 
             </div>
@@ -185,6 +192,12 @@
                     <textarea matInput class="padding" id="" cdkAutosizeMinRows="8" cdkAutosizeMaxRows="8"
                         placeholder="Enter Remarks..." formControlName="remarks"></textarea>
                 </mat-form-field>
+                <ng-container *ngIf="isShowRemarksError"
+
+                >
+                                  <span class="error"><br>Please enter remarks</span>
+
+                              </ng-container>
 
             </div>
             <div class="payment">
