--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -127,18 +127,35 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
+
                     <ng-container
                         *ngIf="loggedInUsersData.user_name === element.user_name && (element.date | date: 'M/d/yy')  ===  (currentDate | date: 'M/d/yy')">
+                        <ng-container *ngIf="element.is_editable === true
+                        ">
                         <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
                             (click)="onEditNewSales(element)">
+
                             <mat-icon aria-label="Edit">edit</mat-icon>
                         </button>
+                        <button mat-icon-button
+                        [matTooltip]="tableParams.active? 'Click to de-active': 'Click to Active'"
+                        [color]="tableParams.active? 'warn': 'primary'" (click)="changeStatus(element.id)">
+                        <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}
+                        </mat-icon>
+                    </button>
+                    </ng-container>
+
+                            <ng-container *ngIf="element.is_editable === false && tableParams.active === false ">
+
                         <button mat-icon-button
                             [matTooltip]="tableParams.active? 'Click to de-active': 'Click to Active'"
                             [color]="tableParams.active? 'warn': 'primary'" (click)="changeStatus(element.id)">
                             <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}
                             </mat-icon>
                         </button>
+
+                    </ng-container>
+
                     </ng-container>
                     <ng-container
                         *ngIf="element.qty < 0  && loggedInUsersData.role !== 'Employees' && loggedInUsersData.user_name !== element.user_name ">
