--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.html
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.html
@@ -1,5 +1,5 @@
 <div class="main-header">
-    <h1 mat-dialog-title><b> {{ !this.data.salesId ? 'Add  Sales' : 'Update  Sales' }}</b> </h1>
+    <h1 mat-dialog-title><b> {{ !this.data.salesId ? 'Add Sales' : 'Update Sales' }}</b> </h1>
     <button mat-button mat-dialog-close>
         <mat-icon>close</mat-icon>
     </button>
@@ -54,7 +54,6 @@
                 </mat-form-field>
                 <mat-spinner class="loader" *ngIf="selectItemLoader" diameter="20"></mat-spinner>
             </div>
-
             <!-- toggle button -->
             <!-- <mat-slide-toggle [(ngModel)]="isChecked">Slide Toggle Checked: {{isChecked}}</mat-slide-toggle> -->
             <!-- qty start -->
@@ -62,10 +61,11 @@
                 <mat-form-field class="input_width">
                     <mat-label>Qty.</mat-label>
                     <ng-container *ngIf="isCheckOverQtyColor">
-                    <input matInput formControlName="qty" type="tel" style="color: red;" maxlength="4" (keyup)="isCheckOverQty()"/>
+                        <input matInput formControlName="qty" type="tel" style="color: red;" maxlength="4"
+                            (keyup)="isCheckOverQty()" />
                     </ng-container>
                     <ng-container *ngIf="!isCheckOverQtyColor">
-                    <input matInput formControlName="qty" type="tel"  maxlength="4" (keyup)="isCheckOverQty()"/>
+                        <input matInput formControlName="qty" type="tel" maxlength="4" (keyup)="isCheckOverQty()" />
                     </ng-container>
                 </mat-form-field>
             </div>
@@ -73,11 +73,8 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Available</mat-label>
-
-
                     <input matInput matTooltip="Not Editable" readonly [value]="availableItemById" />
                 </mat-form-field>
-
             </div>
             <!-- selling_price start -->
             <div class="block">
@@ -85,7 +82,6 @@
                     <mat-label>Selling Price</mat-label>
                     <input matInput formControlName="selling_price" matTooltip="Not Editable" readonly />
                 </mat-form-field>
-
             </div>
             <!-- total start -->
             <div class="block">
@@ -93,10 +89,10 @@
                     <mat-label>Total</mat-label>
                     <input matInput matTooltip="Not Editable" readonly [value]="getItemWiseTotal()" />
                 </mat-form-field>
-
             </div>
             <!-- ADD BUTTON -->
-            <button mat-raised-button color="primary" class="add_button" type="submit" [disabled]="!this.formSupplier.value.item_id|| !this.formSupplier.value.qty ||this.formSupplier.value.item_id === '' || this.formSupplier.value.qty === '' ">
+            <button mat-raised-button color="primary" class="add_button" type="submit"
+                [disabled]="!this.formSupplier.value.item_id|| !this.formSupplier.value.qty ||this.formSupplier.value.item_id === '' || this.formSupplier.value.qty === '' ">
                 {{isEditSalesItem? 'Update': 'Add'}}
             </button>
         </div>
@@ -171,8 +167,7 @@
                 <div class="width">
                     <mat-form-field>
                         <mat-label>Total (₹)</mat-label>
-                        <input matInput disable matTooltip="Not Editable" readonly
-                            [value]="total | currency: 'INR'" />
+                        <input matInput disable matTooltip="Not Editable" readonly [value]="total | currency: 'INR'" />
                     </mat-form-field>
                 </div>
                 <div class="width">
@@ -192,13 +187,9 @@
                     <textarea matInput class="padding" id="" cdkAutosizeMinRows="8" cdkAutosizeMaxRows="8"
                         placeholder="Enter Remarks..." formControlName="remarks"></textarea>
                 </mat-form-field>
-                <ng-container *ngIf="isShowRemarksError"
-
-                >
-                                  <span class="error"><br>Please enter remarks</span>
-
-                              </ng-container>
-
+                <ng-container *ngIf="isShowRemarksError">
+                    <span class="error"><br>Please enter remarks</span>
+                </ng-container>
             </div>
             <div class="payment">
                 <div class="float">
@@ -215,7 +206,8 @@
                     <div class="flex">
                         <span>
                             <section class="checkbox-margin">
-                                <mat-checkbox color="primary" (change)="hideShowOther()" [checked]="isShowOtherPayment"> </mat-checkbox>
+                                <mat-checkbox color="primary" (change)="hideShowOther()" [checked]="isShowOtherPayment">
+                                </mat-checkbox>
                             </section>
                         </span>
                         <span>
@@ -229,7 +221,7 @@
                         <ng-container *ngIf="isShowOtherPayment">
                             <mat-form-field>
                                 <mat-label>Other Payment (₹) </mat-label>
-                                <input matInput disable formControlName="otherPayment"/>
+                                <input matInput disable formControlName="otherPayment" />
                             </mat-form-field>
                         </ng-container>
                     </div>
