purchase due limit over then confirm added

--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -17,7 +17,7 @@
                 <mat-form-field class="field-width margin">
                     <mat-label>All Users</mat-label>
                     <mat-select [(ngModel)]="userId" (selectionChange)="getSales()">
-                        <mat-option value=0>All Users</mat-option>
+                        <mat-option value="0">All Users</mat-option>
                         <mat-option *ngFor="let user of userData" [value]="user.id">
                             {{user.user_name}}
                         </mat-option>
@@ -40,7 +40,7 @@
                 <mat-label>Select Customer</mat-label>
                 <mat-select name="customer" [(ngModel)]="selectedCustomerId"
                     (selectionChange)="toggleCreateAddSalesButton(); getSales()">
-                    <mat-option>All Customer</mat-option>
+                    <mat-option value="0" >All Customer</mat-option>
                     <mat-option *ngFor="let customer of customers" [value]="customer.id">
                         {{customer.company | uppercase}}
                     </mat-option>
