--- a/frontend/src/app/layout/purchase/purchase.component.html
+++ b/frontend/src/app/layout/purchase/purchase.component.html
@@ -17,7 +17,7 @@
                 <mat-label>All Suppliers</mat-label>
                 <mat-select name="tier" [(ngModel)]="selectSupplierId"
                     (selectionChange)="toggleCreateAddPurchaseButton(); getPurchase()">
-                    <mat-option>All suppliers</mat-option>
+                    <mat-option value="0"  (click)="clearSearch(); toggleCreateAddPurchaseButton()"  >All suppliers</mat-option>
                     <mat-option *ngFor="let supplier of suppliers" [value]="supplier.id">
                         {{supplier.company | uppercase}}
                     </mat-option>
@@ -26,9 +26,9 @@
             </mat-form-field>
             <!-- All user -->
             <mat-form-field class="field-width margin">
-                <mat-label>All User</mat-label>
+                <mat-label>All Users</mat-label>
                 <mat-select [(ngModel)]="userId" (selectionChange)="getPurchase()">
-                    <mat-option value="0">--Select--</mat-option>
+                    <mat-option value="0">All Users</mat-option>
                     <mat-option *ngFor="let user of userData" [value]="user.id">
                         {{user.user_name}}
                     </mat-option>
