--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -5,11 +5,9 @@
             <!-- Select date range -->
             <mat-form-field class="field-width margin">
                 <mat-label>Select date range</mat-label>
-                <mat-date-range-input [rangePicker]="picker"
-
-                 >
-                    <input matStartDate [(ngModel)]="fromDate" placeholder="Start date" >
-                    <input matEndDate [(ngModel)]="toDate" placeholder="End date" >
+                <mat-date-range-input [rangePicker]="picker" >
+                    <input matStartDate [(ngModel)]="fromDate"  placeholder="Start date" >
+                    <input matEndDate [(ngModel)]="toDate"  placeholder="End date" >
                     <!-- <input matEndDate [(ngModel)]="toDate" placeholder="End date"(dateChange)="dateWiseSearch()" > -->
                 </mat-date-range-input>
                 <mat-datepicker-toggle matSuffix [for]="picker" ></mat-datepicker-toggle>
@@ -62,15 +60,15 @@
             </ng-container>
             <ng-container matColumnDef="balance">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
-                <td mat-cell *matCellDef="let element">{{ element.balance | currency: 'INR' }}</td>
+                <td mat-cell *matCellDef="let element">{{ !element.balance  ? (0 | currency: 'INR' ): element.balance | currency: 'INR'}}</td>
             </ng-container>
             <ng-container matColumnDef="payment">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Payment</th>
-                <td mat-cell *matCellDef="let element">{{ element.payment | currency: 'INR' }}</td>
+                <td mat-cell *matCellDef="let element">{{ !element.payment ? (0 | currency: 'INR' ): element.payment | currency: 'INR' }}</td>
             </ng-container>
             <ng-container matColumnDef="due_limit">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Due </th>
-                <td mat-cell *matCellDef="let element">{{ element.cdf_total_due | currency: 'INR' }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.balance - element.payment | currency: 'INR' }}</td>
             </ng-container>
             <ng-container matColumnDef="tier_code">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Tier</th>
@@ -79,7 +77,7 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <!-- <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
+               <!-- <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
                         type="button" (click)="onEditNewCdf(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button> -->
